--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Jasmine Spec Runner v2.0.0</title>
 
@@ -15,12 +15,13 @@
     <script type="text/javascript" src="../src/hilary.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    <script type="text/javascript" src="spec/hilarySpec.js"></script>
+    <script type="text/javascript" src="specs/SpecHelper.js"></script>
+    <script type="text/javascript" src="specs/hilaryFixture.js"></script>
+    <script type="text/javascript" src="specs/hilaryDiFixture.js"></script>
+    <script type="text/javascript" src="specs/hilaryPipelineFixture.js"></script>
 
-  </head>
+</head>
+<body>
 
-  <body>
-  
-  </body>
+</body>
 </html>
