adds AMD global, jasmine libs, starts loader

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,13 +12,13 @@
     <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
     <!-- include source files here... -->
-    <script type="text/javascript" src="../src/hilary.js"></script>
+    <script type="text/javascript" src="../release/hilaryWithAMDAndLoader.min.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="specs/SpecHelper.js"></script>
     <script type="text/javascript" src="specs/hilaryFixture.js"></script>
     <script type="text/javascript" src="specs/hilaryDiFixture.js"></script>
     <script type="text/javascript" src="specs/hilaryPipelineFixture.js"></script>
+    <script type="text/javascript" src="specs/hilaryAmdFixture.js"></script>
 
 </head>
 <body>
