--- a/test/browser/SpecRunner.html
+++ b/test/browser/SpecRunner.html
@@ -7,12 +7,14 @@
     <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.0/jasmine_favicon.png">
     <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
     <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
     <!-- include source files here... -->
     <script type="text/javascript" src="../release/hilaryWithAMDAndLoader.min.js"></script>
+    <script type="text/javascript" src="../release/hilary.jQueryEventEmitter.min.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="specs/hilaryFixture.js"></script>
