adds fixtures for id and is

--- a/test/browser/test.html
+++ b/test/browser/test.html
@@ -26,6 +26,8 @@
     <script src="../hilary.singletons.fixture.js"></script>
     <script src="../hilary.pipeline.fixture.js"></script>
     <script src="../hilary.blueprint.fixture.js"></script>
+    <script src="../hilary.id.fixture.js"></script>
+    <script src="../hilary.is.fixture.js"></script>
     <script src="hilary.browser.jQueryEventEmitter.fixture.js"></script>
     <script src="hilary.browser.amd.fixture.js"></script>
     
