--- a/test/browser/test.html
+++ b/test/browser/test.html
@@ -28,6 +28,7 @@
     <script src="../hilary.blueprint.fixture.js"></script>
     <script src="../hilary.id.fixture.js"></script>
     <script src="../hilary.is.fixture.js"></script>
+    <script src="../hilary.bootstrapper.fixture.js"></script>
     <script src="hilary.browser.jQueryEventEmitter.fixture.js"></script>
     <script src="hilary.browser.amd.fixture.js"></script>
     
