reduces code necessary for vue-spa

--- a/examples/vue-spa/papyr/index.html
+++ b/examples/vue-spa/papyr/index.html
@@ -26,11 +26,14 @@
   <script src="/app/layout-content/content-vue.js"></script>
   <script src="/app/layout-content/loading-component.js"></script>
 
+  <script src="/app/header/header-component.js"></script>
+  <script src="/app/header/header-vue.js"></script>
+
   <script src="/app/home/home-component.js"></script>
   <script src="/app/home/home-controller.js"></script>
 
+  <script src="/app/query-string.js"></script>
   <script src="/app/router.js"></script>
-  <script src="/app/startup.js"></script>
   <script src="/app/app.js"></script>
 </body>
 </html>
