better working example for vue-spa

--- a/examples/vue-spa/papyr/index.html
+++ b/examples/vue-spa/papyr/index.html
@@ -17,7 +17,7 @@
     </component>
   </section>
 
-  <script src="/node_modules/vue/dist/vue.min.js"></script>
+  <script src="/node_modules/vue/dist/vue.js"></script>
   <script src="/node_modules/page/page.js"></script>
   <script src="/node_modules/polyn/release/polyn.js"></script>
   <script src="/node_modules/hilary/release/hilary.js"></script>
@@ -31,6 +31,16 @@
 
   <script src="/app/home/home-component.js"></script>
   <script src="/app/home/home-controller.js"></script>
+
+  <script src="/app/books/Book.js"></script>
+  <script src="/app/books/book-component.js"></script>
+  <script src="/app/books/books-controller.js"></script>
+
+  <script src="/app/products/Product.js"></script>
+  <script src="/app/products/product-component.js"></script>
+  <script src="/app/products/products-component.js"></script>
+  <script src="/app/products/products-controller.js"></script>
+  <script src="/app/products/products-repository.js"></script>
 
   <script src="/app/query-string.js"></script>
   <script src="/app/router.js"></script>
