--- a/examples/vue-spa/papyr/index.html
+++ b/examples/vue-spa/papyr/index.html
@@ -3,6 +3,8 @@
   <title>Papyr</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
   <header id="header">
